--- a/animal_classification/android/app/src/debug/AndroidManifest.xml
+++ b/animal_classification/android/app/src/debug/AndroidManifest.xml
@@ -1,7 +1,25 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.animal_classification">
+
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <application
+        android:label="animal_classification"
+        android:icon="@mipmap/ic_launcher"
+        tools:replace="android:icon, android:label"> <!-- Resolves the icon and label conflict -->
+        
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
